@@ -14,14 +14,14 @@ import org.graphstream.graph.implementations.SingleGraph;
 import org.graphstream.stream.file.FileSinkGML;
 
 public class Main {
+    private static int id = 0;
     private static Graph ast = new SingleGraph("ast");
     private static FileSinkGML out1 = new FileSinkGML();
-    private static int id = 0;
     private static Graph task = new MultiGraph("task");
     private static FileSinkGML out2 = new FileSinkGML();
-    private static Scope ENV;
-    private static Stack<ASTNode> LOOPS;
-    private static Signature SIG = new Signature();
+    private static AGConstruct aC = new AGConstruct();
+    private static TaskConstruct tC = new TaskConstruct();
+
     public static void main(String[] args) {
         try {
             out1.begin("AST.gml");
@@ -38,28 +38,30 @@ public class Main {
             ASTConstructListener astL = new ASTConstructListener ();
             walker.walk(astL, tree);
             ASTNode g = astL.getGoal();
-            semanticAnalysis(g);
-            semanticAnalysis(g);
-            semanticAnalysis(g);
-            semanticAnalysis(g);
-            semanticAnalysis(g);
-            semanticAnalysis(g);
-            semanticAnalysis(g);
-            System.out.println("sssssss");
-            semanticAnalysis(g);
-            System.out.println("sssssss");
+            int count = 0;
+            while((!g.getCOMPLETE()||!g.getOK())&& count<10){
+                count ++;
+                aC.semanticAnalysis(g);
+            }
             drawGraph(g);
             out1.end();
-            /*
+
             out2.begin("TASK.gml");
             task.addSink(out2);
             task.setStrict(false);
 
-            taskConstruct(g);
-            taskConstruct(g);
-            drawTask(g);
-            Interpreter(g.getFirst());
+            //for(int i = 2;i<g.getChildren().size();i++){
+                taskConstruct(g);
+                taskConstruct(g);
+            //}
+            //for(int i = 2;i<g.getChildren().size();i++){
+                drawTask(g);
+            //}
+
             out2.end();
+             /*
+            Interpreter(g.getFirst());
+
             */
             //Trees.inspect(tree, parser);
         }catch (IOException e) {
@@ -68,57 +70,6 @@ public class Main {
         }
     }
     //add edges and draw graph
-    public static void drawTask(ASTNode start){
-        ASTNode current = start;
-
-        if (current.getName().equals("Goal")){
-            task.addNode("Start");
-            task.getNode("Start").addAttribute("label","Start");
-            TaskNode first = current.getFirst();
-            TaskNode last = current.getLast();
-            TaskNode el = current.getChildren().get(0).getNext();
-            addTaskG(first);
-            addTaskG(last);
-            addTaskG(el);
-
-            task.addEdge("Start CE "+first.getTask(),"Start",String.valueOf(first.getId()));
-            task.addEdge(last.getTask()+" CE "+el.getTask(),String.valueOf(last.getId()),String.valueOf(el.getId()));
-
-            drawTask(current.getChildren().get(0));
-
-        }else if(current.getArgumentType().equals("UE")){
-
-            TaskNode ue = current.getLast();
-            TaskNode e = current.getChildren().get(0).getLast();
-            addTaskG(ue);
-            addTaskG(e);
-
-            task.addEdge(e.getId()+" CE " + ue.getId(),String.valueOf(e.getId()),String.valueOf(ue.getId()));
-            task.addEdge(ue.getId()+" DE " + e.getId(),String.valueOf(ue.getId()),String.valueOf(e.getId()));
-
-            drawTask(current.getChildren().get(0));
-
-        }else if(current.getArgumentType().equals("BE")){
-
-            TaskNode e1l = current.getChildren().get(0).getLast();
-            TaskNode e2f = current.getChildren().get(1).getFirst();
-            TaskNode e2l = current.getChildren().get(1).getLast();
-            TaskNode b = current.getLast();
-            addTaskG(e1l);
-            addTaskG(e2f);
-            addTaskG(e2l);
-            addTaskG(b);
-
-            task.addEdge(e1l.getId()+" CE " + e2f.getId(),String.valueOf(e1l.getId()),String.valueOf(e2f.getId()));
-            task.addEdge(e2l.getId()+" CE " + b.getId(),String.valueOf(e2l.getId()),String.valueOf(b.getId()));
-            task.addEdge(b.getId()+" DE " + e1l.getId(),String.valueOf(b.getId()),String.valueOf(e1l.getId()));
-            task.addEdge(b.getId()+" DE " + e2l.getId(),String.valueOf(b.getId()),String.valueOf(e2l.getId()));
-
-            drawTask(current.getChildren().get(0));
-            drawTask(current.getChildren().get(1));
-        }
-    }
-
     public static void drawGraph(ASTNode goal){
         ASTNode g = goal;
 
@@ -134,262 +85,113 @@ public class Main {
             ast.addEdge(g.getId()+" to "+a.getId(), String.valueOf(g.getId()), String.valueOf(a.getId()),true);
         }
     }
-    public static void semanticAnalysis(ASTNode start){
-        ASTNode current = start;
-        if (current.getName().equals("Goal")){
-            //inh
-            current.setSCOPE(new Scope(null));
-            current.setLOOPS(new Stack<>());
-            ENV = current.getSCOPE();
-            LOOPS = current.getLOOPS();
-            for(ASTNode c : current.getChildren()){
-                semanticAnalysis(c);
-            }
-
-            //syn
-            current.setOK(current.childOk());
-            current.setCOMPLETE(current.getSCOPE() != null && current.getOK() != null && current.getLOOPS() !=null
-                    &&current.childComplete());
-            ENV.setComplete(true);
-            ENV = ENV.getOuter();
-
-        }else if(current.getName().equals("Global") || current.getName().equals("Local")){
-            //inh
-            for (ASTNode a: current.getChildren()) {
-                semanticAnalysis(a);
-            }
-            //syn
-            current.setOK(current.childOk());
-            current.setCOMPLETE(current.getOK()!=null && current.childComplete());
-
-        }else if(current.getName().equals("Declaration")){
-            //syn
-            current.setOK(!ENV.isDefined(current.getOP_code()));
-            current.setCOMPLETE(current.getOK()!=null);
-            ENV.setDefinition(current.getOP_code(),current);
-            if(current.In){
-                SIG.addFormalInParameter(current.getOP_code(),current);
-            }else if(current.Out){
-                SIG.addFormalOutParameter(current.getOP_code(),current);
-            }
-        }else if(current.getName().equals("Program")){
-            //inh
-            current.setSCOPE(new Scope(ENV));
-            ENV = current.getSCOPE();
-
-            for (ASTNode a :current.getChildren()) {
-                semanticAnalysis(a);
-            }
-            //syn
-            current.setOK(current.childOk());
-            current.setCOMPLETE(current.getSCOPE()!=null && current.getOK()!=null&&current.childComplete());
-            ENV.setComplete(true);
-            ENV = ENV.getOuter();
-        }else if(current.getName().equals("Function")){
-            //inh
-            current.setSCOPE(new Scope(ENV));
-            current.setSIG(new Signature());
-            ENV = current.getSCOPE();
-            ENV.setDefinition(current.getOP_code(),current);
-            SIG = current.getSIG();
-            for (ASTNode a :current.getChildren()) {
-                semanticAnalysis(a);
-            }
-            //syn
-            current.setOK(current.childOk());
-            current.setCOMPLETE(current.getSCOPE()!=null&&current.getSIG()!=null&&current.getOK()!=null
-                    &&current.childComplete());
-            ENV.setComplete(true);
-            ENV = ENV.getOuter();
-
-        }else if(current.getName().equals("Stats")){
-            for(ASTNode a : current.getChildren()){
-                semanticAnalysis(a);
-            }
-            current.setOK(current.childOk());
-            current.setCOMPLETE(current.getOK()!=null&&current.childComplete());
-        }else if(current.getName().equals("IF")){
-            ASTNode exp = current.getChildren().get(0);
-            exp.setCoerce(false);
-            for(ASTNode c : current.getChildren()){
-                semanticAnalysis(c);
-            }
-            //syn
-            current.setOK(!ENV.isDefined(current.Label)&& exp.getKind().equals("Bool") &&current.childOk());
-            current.setCOMPLETE(current.getOK()!=null && current.childComplete());
-            if(current.Label != null &&!ENV.getComplete()){
-                ENV.setDefinition((current.Label),current);
-            }
-
-        }else if(current.getName().equals("While")){
-            ASTNode exp = current.getChildren().get(0);
-            exp.setCoerce(false);
-            LOOPS.push(current);
-            semanticAnalysis(current.getChildren().get(0));
-            semanticAnalysis(current.getChildren().get(1));
-
-            //syn
-            current.setOK(!ENV.isDefined(current.Label)&& exp.getKind().equals("Bool") &&current.childOk());
-            current.setCOMPLETE(current.getOK()!=null && current.childComplete());
-            LOOPS.pop();
-            if(current.Label != null &&!ENV.getComplete()){
-                ENV.setDefinition(current.Label,current);
-            }
-
-        }else if(current.getName().equals("Assign")){
-            ASTNode va = current.getChildren().get(0);
-            ASTNode exp = current.getChildren().get(1);
-            //inh
-            if(va.getKind()!=null && exp.getKind()!=null){
-                exp.setCoerce(va.getKind().equals("Real")&&exp.getKind().equals("Int"));
-            }
-            semanticAnalysis(va);
-            semanticAnalysis(exp);
-
-            //syn
-
-            current.setOK(((va.getKind().equals("Real")&&isNumericValue(exp.getKind()))
-                    || va.getKind().equals(exp.getKind())&&!va.getKind().equals("Error"))
-                    && !va.getRO()
-                    && !ENV.isDefined(current.Label)
-                    && current.childOk());
-
-
-            current.setCOMPLETE(current.getOK()!=null&&current.childComplete());
-            if(current.Label != null &&!ENV.getComplete()){
-                ENV.setDefinition(current.Label,current);
-            }
-
-        }else if(current.getName().equals("JMP")){
-            if(ENV.getComplete()){
-                current.setOK(!ENV.isDefined(current.Label) && ENV.isDefined(current.TARGET.Label));
-                current.TARGET = ENV.getDefinition(current.TARGET.Label);
-            }else {
-                current.setOK(false);
-            }
-            current.setCOMPLETE(current.getOK()!=null&&current.TARGET!=null);
-            if(current.Label!=null&&!ENV.getComplete()){
-                ENV.setDefinition(current.Label,current);
-            }
-
-
-        }else if(current.getName().equals("CONT")){
-            current.setOK(!ENV.isDefined(current.Label));
-            current.TARGET = LOOPS.peek();
-            current.setCOMPLETE(current.getOK()!=null&&current.TARGET!=null);
-            if(current.Label!=null&&!ENV.getComplete()){
-                ENV.setDefinition(current.Label,current);
-            }
-
-        }else if(current.getName().equals("EXIT")){
-            current.setOK(!ENV.isDefined(current.Label));
-            current.TARGET = LOOPS.peek();
-            current.setCOMPLETE(current.getOK()!=null&&current.TARGET!=null);
-            if(current.Label!=null&&!ENV.getComplete()){
-                ENV.setDefinition(current.Label,current);
-            }
-        }else if(current.getName().equals("FC")){
-            //inh
-            for(int i = 0; i<current.getChildren().size();i++){
-                ASTNode t = current.getChildren().get(i);
-                ASTNode p = current.TARGET.getSIG().getParameter(i);
-                t.setCoerce(p.In && t.getKind().equals("Int")&&p.getKind().equals("Real"));
-            }
-            for(ASTNode c : current.getChildren()){
-                semanticAnalysis(c);
-            }
-            //syn
-            if(ENV.getOuter().getComplete()){
-                current.TARGET = ENV.getOuter().getDefinition(current.TARGET.getOP_code());
-            }
-            current.setKind(current.TARGET.getKind());
-            current.setOK(isCompatible(current.getChildren(),current.TARGET.getSIG()) && current.childOk());
-            current.setCOMPLETE(current.getKind()!=null&&current.getCoerce()!=null&current.TARGET!=null&&current.getOK()
-                    &&current.childComplete());
-
-        }else if(current.getName().equals("Constant")){
-            current.setCOMPLETE(true);
-            current.setOK(true);
-            current.setKind(current.getArgumentType());
-
-        }else if(current.getName().equals("Variable")){
-            //syn
-            ASTNode temp = ENV.getDefinition(current.getOP_code());
-
-            System.out.println(current.getName()+" "+current.getKind()+" "+current.getOP_code()+" "+ENV.isDefined(current.getOP_code()));
-            System.out.println(temp.getName()+" "+temp.getKind()+" "+temp.getOP_code());
-            System.out.println();
-            current.setKind(temp.getKind());
-            current.setRO(temp.getRO());
-            current.setRW(temp.getRW());
-            current.setOK(ENV.isDefined(current.getOP_code())&&current.getKind()!=null&&current.getRO()!=null
-                    &&current.getRW()!=null);
-            current.setCOMPLETE(current.getOK());
-        }else if(current.getArgumentType().equals("UE")){
-            //inh
-            current.getChildren().get(0).setCoerce(false);
-            semanticAnalysis(current.getChildren().get(0));
-            ASTNode child =current.getChildren().get(0);
-            //syn
-            if((child.getKind().equals("Real")||child.getKind().equals("Int"))&&isNumeric(current.getOP_code())){
-                current.setKind(child.getKind());
-            }else if(child.getKind().equals("Bool")&&current.getOP_code().equals("NOT")){
-                current.setKind(child.getKind());
-            }else{
-                current.setKind("Error");
-            }
-
-            current.setOK(!current.getKind().equals("Error")&& current.childOk());
-            current.setCOMPLETE(current.getKind() != null && current.getCoerce() != null && child.getCOMPLETE() != null);
-
-        }else if(current.getArgumentType().equals("BE")){
-            //inh
-            if(current.getKind()!= null){
-                current.getChildren().get(0).setCoerce(current.getChildren().get(0).getKind().equals("Int") && current.getKind().equals("Real"));
-                current.getChildren().get(1).setCoerce(current.getChildren().get(1).getKind().equals("Int") && current.getKind().equals("Real"));
-            }
-
-            semanticAnalysis(current.getChildren().get(0));
-            semanticAnalysis(current.getChildren().get(1));
-            ASTNode left = current.getChildren().get(0);
-            ASTNode right = current.getChildren().get(1);
-            //syn
-            if(left.getKind().equals("Int") && right.getKind().equals("Int")&& isNumeric(current.getOP_code())){
-                current.setKind("Int");
-            }else if((left.getKind().equals("Real") && isNumericValue(right.getKind())|| isNumericValue(left.getKind()) && right.getKind().equals("Real")) && isNumeric(current.getOP_code())){
-                current.setKind("Real");
-            }else if(left.getKind().equals("String") && right.getKind().equals("String")&& current.getOP_code().equals("+")){
-                current.setKind("String");
-            }else if(left.getKind().equals("Bool") && right.getKind().equals("Bool") && isLogic(current.getOP_code())){
-                current.setKind("Bool");
-            }else if(isNumericValue(left.getKind()) && isNumericValue(right.getKind()) && (isCompareNumeric(current.getOP_code()))|| isCompare(current.getOP_code())){
-                current.setKind("Bool");
-            }else if(left.getKind().equals(right.getKind()) && isCompare(current.getOP_code())){
-                current.setKind("Bool");
-            }else{
-                current.setKind("Error");
-            }
-            current.setOK(!current.getKind().equals("Error")&& current.childOk());
-            current.setCOMPLETE(current.getKind()!=null && current.getCoerce()!=null);
-        }
-    }
 
     public static void taskConstruct(ASTNode start){
         ASTNode current = start;
         if (current.getName().equals("Goal")){
-            //inh
-            TaskNode t = new TaskNode("Terminate",id);
-            id++;
-            t.setKind("Void");
-            t.setSort(t.getTask());
-            current.getChildren().get(0).setNext(t);
+            for(ASTNode a : current.getChildren()){
+                taskConstruct(a);
+            }
+        }else if(current.getName().equals("Program")){
+            if(current.getNext()==null){
+                TaskNode t = new TaskNode("Terminate",id);
+                id++;
+                current.setNext(t);
+                addTaskG(t);
+            }
+            current.getChildren().get(1).setNext(current.getNext());
+            taskConstruct(current.getChildren().get(1));
+        }else if(current.getName().equals("Function")){
+            if(current.getNext()==null){
+                TaskNode t = new TaskNode("Return",id);
+                id++;
+                current.setNext(t);
+                addTaskG(t);
+            }
+            current.getChildren().get(1).setNext(current.getNext());
+            taskConstruct(current.getChildren().get(1));
+        }else if(current.getName().equals("Stats")){
+            for(int i = 0;i<current.getChildren().size()-1;i++){
+                current.getChildren().get(i).setNext(current.getChildren().get(i+1).getFirst());
+            }
+            for(int i = 0;i<current.getChildren().size();i++){
+                taskConstruct(current.getChildren().get(i));
+            }
+            current.setFirst(current.getChildren().get(0).getFirst());
+            current.getChildren().get(current.getChildren().size()-1).setNext(current.getNext());
+            current.setLast(current.getChildren().get(current.getChildren().size()-1).getLast());
 
-            taskConstruct(current.getChildren().get(0));
-            ASTNode child =current.getChildren().get(0);
-            //syn
-            current.setFirst(child.getFirst());
-            current.setLast(child.getLast());
+        }else if(current.getName().equals("Assign")){
+            ASTNode va = current.getChildren().get(0);
+            ASTNode exp = current.getChildren().get(1);
 
+            taskConstruct(exp);
+            //TODO print
+            System.out.println(va.getName()+" "+va.getOP_code()+" "+va.getRW());
+            if(exp.getNext()==null){
+                if(va.getRW()){
+                    TaskNode t = new TaskNode("Print", id);
+                    id++;
+                    t.setPred(exp.getLast());
+                    t.setNext(current.getNext());
+                    t.setKind(va.getKind());
+                    addTaskG(t);
+                    exp.setNext(t);
+                }else {
+                    TaskNode t = new TaskNode("Store", id);
+                    id++;
+                    t.setPred(exp.getLast());
+                    t.setNext(current.getNext());
+                    t.setKind(va.getKind());
+                    t.setOpCode(va.getOP_code());
+                    t.varName = va.getOP_code();
+                    t.isLoacl = true;
+                    addTaskG(t);
+                    exp.setNext(t);
+                }
+            }
+            if(va.getRW()){
+                TaskNode t = exp.getNext();
+                t.setPred(exp.getLast());
+                t.setNext(current.getNext());
+                t.setKind(va.getKind());
+            }else {
+                TaskNode t = exp.getNext();
+                t.setPred(exp.getLast());
+                t.setNext(current.getNext());
+                t.setOpCode(va.getOP_code());
+                t.setKind(va.getKind());
+                t.varName = va.getOP_code();
+                t.isLoacl = true;
+
+            }
+            current.setFirst(exp.getFirst());
+
+        }else if(current.getName().equals("Variable")){
+            if(current.varRef){
+                if(current.getLast() == null) {
+                    TaskNode t = new TaskNode("Load", id);
+                    id++;
+                    t.setKind(current.getKind());
+                    t.varName = current.getOP_code();
+                    t.setCoerce(current.getCoerce());
+                    t.setNext(current.getNext());
+                    t.setOpCode(current.getOP_code());
+                    t.setPred(current.getPred());
+                    t.setSort(t.getKind());
+                    current.setLast(t);
+                    current.setFirst(current.getLast());
+                    addTaskG(t);
+                }
+                TaskNode t = current.getLast();
+                t.setKind(current.getKind());
+                t.varName = current.getOP_code();
+                t.setCoerce(current.getCoerce());
+                t.setOpCode(current.getOP_code());
+                t.setNext(current.getNext());
+                t.setPred(current.getPred());
+                t.setSort(t.getKind());
+            }
         }else if (current.getName().equals("Constant")){
             if(current.getLast() == null) {
                 TaskNode t = new TaskNode("Const", id);
@@ -401,6 +203,7 @@ public class Main {
                 t.setSort(t.getKind());
                 current.setLast(t);
                 current.setFirst(current.getLast());
+                addTaskG(t);
             }
             TaskNode t = current.getLast();
             t.setKind(current.getKind());
@@ -413,11 +216,92 @@ public class Main {
             }
             current.setFirst(current.getLast());
 
-        }else if(current.getArgumentType().equals("UE")){
+        }else if(current.getName().equals("IF")){
+            ASTNode exp = current.getChildren().get(0);
+            for (int i=0;i<current.getChildren().size();i++){
+                if(i>0){
+                    current.getChildren().get(i).setNext(current.getNext());
+                }
+                taskConstruct(current.getChildren().get(i));
+            }
+
+            if(exp.getNext()==null){
+                TaskNode t = new TaskNode("IF",id);
+                id++;
+                t.setPred(exp.getLast());
+                exp.setNext(t);
+                t.t = current.getChildren().get(1);
+                if(current.getChildren().size()>2){
+                    t.f = current.getChildren().get(2);
+                }
+                addTaskG(t);
+            }
+            TaskNode t = exp.getNext();
+            t.setPred(exp.getLast());
+            exp.setNext(t);
+            t.t = current.getChildren().get(1);
+            if(current.getChildren().size()>2){
+                t.f = current.getChildren().get(2);
+            }
+            current.setFirst(exp.getFirst());
+
+        }else if(current.getName().equals("While")){
+            ASTNode exp = current.getChildren().get(0);
+            ASTNode st = current.getChildren().get(1);
+            taskConstruct(exp);
+            taskConstruct(st);
+
+            if(exp.getNext()==null){
+                TaskNode t = new TaskNode("IF",id);
+                id++;
+                t.setPred(exp.getLast());
+                exp.setNext(t);
+                t.t = current.getChildren().get(1);
+                t.f = current;
+                addTaskG(t);
+            }
+            TaskNode t = exp.getNext();
+            t.setPred(exp.getLast());
+            exp.setNext(t);
+            t.t = current.getChildren().get(1);
+            t.f = current;
+            current.setFirst(exp.getFirst());
+            st.setNext(exp.getFirst());
+        }else if(current.getName().equals("FC")){
+            if(current.getLast()==null){
+                TaskNode p = new TaskNode("Push",id);
+                p.setOpCode(current.getOP_code());
+                id++;
+                addTaskG(p);
+                TaskNode c = new TaskNode("Call",id);
+                id++;
+                addTaskG(c);
+                for(ASTNode a : current.getChildren()){
+                    taskConstruct(a);
+                }
+                p.setNext(current.getChildren().get(0).getFirst());
+                current.TARGET.getSIG().reverse();
+                for(int i = 0;i<current.getChildren().size();i++){
+                    TaskNode s = new TaskNode("Store",id);
+                    id++;
+                    s.setOpCode(current.TARGET.getSIG().getIn().get(i).getOP_code());
+                    if(i+1<current.getChildren().size()){
+                        s.setNext(current.getChildren().get(i+1).getFirst());
+                    }
+                    current.getChildren().get(i).getLast().setNext(s);
+                    addTaskG(s);
+                }
+                current.getChildren().get(current.getChildren().size()-1).getLast().getNext().setNext(c);
+                current.setFirst(p);
+                current.setLast(c);
+            }
+
+        }else if(current.getName().equals("UE")){
             //inh
             current.getChildren().get(0).setNext(current.getLast());
             taskConstruct(current.getChildren().get(0));
             ASTNode child =current.getChildren().get(0);
+
             //syn
             current.setFirst(child.getFirst());
             if(current.getLast() == null){
@@ -429,6 +313,7 @@ public class Main {
                 t.setNext(current.getNext());
                 t.setPred(child.getLast());
                 current.setLast(t);
+                addTaskG(t);
             }
             TaskNode t = current.getLast();
             t.setKind(current.getKind());
@@ -440,7 +325,7 @@ public class Main {
                 t.setKind("Real");
             }
 
-        }else if(current.getArgumentType().equals("BE")){
+        }else if(current.getName().equals("BE")){
             //inh
             current.getChildren().get(0).setNext(current.getChildren().get(1).getFirst());
             current.getChildren().get(1).setNext(current.getLast());
@@ -460,6 +345,7 @@ public class Main {
                 t.setPredLeft(left.getLast());
                 t.setPredRight(right.getLast());
                 current.setLast(t);
+                addTaskG(t);
             }
             TaskNode t = current.getLast();
             t.setKind(current.getKind());
@@ -475,6 +361,106 @@ public class Main {
 
     }
 
+    public static void drawTask(ASTNode start){
+        ASTNode current = start;
+        if (current.getName().equals("Goal")){
+            for (ASTNode a: current.getChildren()) {
+                drawTask(a);
+            }
+
+        }else if(current.getName().equals("Program")){
+            task.addNode("Start");
+            task.getNode("Start").addAttribute("label","Start");
+            TaskNode first = current.getChildren().get(1).getFirst();
+
+            task.addEdge("Start CE "+first.getTask(),"Start",String.valueOf(first.getId()));
+
+            drawTask(current.getChildren().get(1));
+        }else if(current.getName().equals("Function")){
+            drawTask(current.getChildren().get(1));
+        }else if(current.getName().equals("Stats")){
+            addTaskG(current.getFirst());
+            for (ASTNode a:current.getChildren()) {
+                drawTask(a);
+            }
+        }else if(current.getName().equals("Assign")){
+            ASTNode exp = current.getChildren().get(1);
+            TaskNode st = exp.getNext();
+
+            drawTask(exp);
+            System.out.println(st.getTask()+" "+st.getOpCode());
+            task.addEdge(exp.getLast().getId()+" CE " + st.getId(),String.valueOf(exp.getLast().getId()),String.valueOf(st.getId()));
+            task.addEdge(st.getId()+" DE " + exp.getLast().getId(),String.valueOf(st.getId()),String.valueOf(exp.getLast().getId()));
+            task.addEdge(st.getId()+" CE " + current.getNext().getId(),String.valueOf(st.getId()),String.valueOf(current.getNext().getId()));
+
+        }else if(current.getName().equals("IF")){
+            ASTNode exp = current.getChildren().get(0);
+            TaskNode taskNode = exp.getNext();
+            ASTNode t = taskNode.t;
+            ASTNode f = taskNode.f;
+
+            drawTask(exp);
+            drawTask(t);
+            drawTask(f);
+
+            task.addEdge(exp.getLast().getId()+" CE " + taskNode.getId(),String.valueOf(exp.getLast().getId()),String.valueOf(taskNode.getId()));
+            task.addEdge(taskNode.getId()+" CE " + t.getFirst().getId(),String.valueOf(taskNode.getId()),String.valueOf(t.getFirst().getId()));
+            task.addEdge(taskNode.getId()+" CE " + f.getFirst().getId(),String.valueOf(taskNode.getId()),String.valueOf(f.getFirst().getId()));
+
+        }else if(current.getName().equals("While")){
+            ASTNode exp = current.getChildren().get(0);
+            ASTNode st = current.getChildren().get(1);
+            TaskNode taskNode = exp.getNext();
+            ASTNode t = taskNode.t;
+            ASTNode f = taskNode.f;
+
+            drawTask(exp);
+            drawTask(st);
+
+            task.addEdge(exp.getLast().getId()+" CE " + taskNode.getId(),String.valueOf(exp.getLast().getId()),String.valueOf(taskNode.getId()));
+            task.addEdge(taskNode.getId()+" CE " + t.getFirst().getId(),String.valueOf(taskNode.getId()),String.valueOf(t.getFirst().getId()));
+            task.addEdge(taskNode.getId()+" CE " + f.getNext().getId(),String.valueOf(taskNode.getId()),String.valueOf(f.getNext().getId()));
+
+
+        }else if(current.getName().equals("FC")){
+            task.addEdge(current.getFirst().getId()+" CE "+current.getFirst().getNext().getId()
+                    ,String.valueOf(current.getFirst().getId()),String.valueOf(current.getFirst().getNext().getId()));
+
+
+            for(int i = 0;i<current.getChildren().size();i++){
+                drawTask(current.getChildren().get(i));
+                TaskNode f = current.getChildren().get(i).getLast();
+                TaskNode s = current.getChildren().get(i).getLast().getNext();
+                task.addEdge(f.getId()+" CE "+ s.getId(),String.valueOf(f.getId()),String.valueOf(s.getId()));
+                task.addEdge(s.getId()+" DE "+ f.getId(),String.valueOf(s.getId()),String.valueOf(f.getId()));
+                task.addEdge(s.getId()+" CE "+ s.getNext().getId(),String.valueOf(s.getId()),String.valueOf(s.getNext().getId()));
+            }
+        }else if(current.getName().equals("UE")){
+
+            TaskNode ue = current.getLast();
+            TaskNode e = current.getChildren().get(0).getLast();
+
+            task.addEdge(e.getId()+" CE " + ue.getId(),String.valueOf(e.getId()),String.valueOf(ue.getId()));
+            task.addEdge(ue.getId()+" DE " + e.getId(),String.valueOf(ue.getId()),String.valueOf(e.getId()));
+
+            drawTask(current.getChildren().get(0));
+
+        }else if(current.getName().equals("BE")){
+
+            TaskNode e1l = current.getChildren().get(0).getLast();
+            TaskNode e2f = current.getChildren().get(1).getFirst();
+            TaskNode e2l = current.getChildren().get(1).getLast();
+            TaskNode b = current.getLast();
+
+            task.addEdge(e1l.getId()+" CE " + e2f.getId(),String.valueOf(e1l.getId()),String.valueOf(e2f.getId()));
+            task.addEdge(e2l.getId()+" CE " + b.getId(),String.valueOf(e2l.getId()),String.valueOf(b.getId()));
+            task.addEdge(b.getId()+" DE " + e1l.getId(),String.valueOf(b.getId()),String.valueOf(e1l.getId()));
+            task.addEdge(b.getId()+" DE " + e2l.getId(),String.valueOf(b.getId()),String.valueOf(e2l.getId()));
+
+            drawTask(current.getChildren().get(0));
+            drawTask(current.getChildren().get(1));
+        }
+    }
     private static void Interpreter(TaskNode t) {
         TaskNode CT = t;
         while (CT != null) {
@@ -629,62 +615,18 @@ public class Main {
         }
     }
 
-    //Auxiliary
-    /*
-    * boolean isCompatible (List<AstNode> expressions, Signature sig)
-	true, if
-		same number of actual in-parameters and formal in-paramters
-		&& i-th actual in-parameter KIND is same or coercible to i-th formal in-paramter KIND
-		&& same number of actual out-parameters and formal out-paramtere
-		&& i-th formal out-parameter KIND is same or coercible to i-th actual out-paramter
-		&& all actual out-parameter are variables and ! READ_ONLY
-	false, otherwise */
-    private static boolean isCompatible(ArrayList<ASTNode> exp,Signature sig){
-        boolean b = false;
-        if(exp.size() == sig.getIn().size()){
-            for(int i = 0;i<exp.size();i++){
-                if(exp.get(i).getKind().equals(sig.getIn().get(i).getKind())
-                        || (isNumericValue(exp.get(i).getKind())) && isNumericValue(sig.getIn().get(i).getKind()))
-                {
-                    b=true;
-                }else {
-                    return false;
-                }
-            }
-        }
-        return b;
-    }
-    private static boolean isNumeric(String op){
-        String [] a = {"+", "-", "*", "/", "MOD", "**"};
-        return Arrays.asList(a).contains(op);
-    }
-    private static boolean isNumericValue(String kind){
-        String [] a = {"Real", "Int"};
-        return Arrays.asList(a).contains(kind);
-    }
-    private static boolean isLogic(String op){
-        String [] a = {"AND", "OR", "XOR" };
-        return Arrays.asList(a).contains(op);
-    }
-    private static boolean isCompareNumeric(String op){
-        String [] a = {"<", "<=", ">", ">="};
-        return Arrays.asList(a).contains(op);
-    }
-    private static boolean isCompare(String op){
-        String [] a = {"==", "<>"};
-        return Arrays.asList(a).contains(op);
-    }
+
     //add created Task node as graph node.
     private static void addTaskG(TaskNode n){
         if(n.getTask().equals("Const")){
             task.addNode(String.valueOf(n.getId()));
-            task.getNode(String.valueOf(n.getId())).addAttribute("label", n.getValue()+"("+n.getKind()+" "+n.getCoerce()+")");
+            task.getNode(String.valueOf(n.getId())).addAttribute("label", n.getValue()+" "+n.getKind());
         }else if(n.getTask().equals("Terminate")){
             task.addNode(String.valueOf(n.getId()));
-            task.getNode(String.valueOf(n.getId())).addAttribute("label", n.getTask()+"("+n.getKind()+" "+n.getCoerce()+")");
+            task.getNode(String.valueOf(n.getId())).addAttribute("label", n.getTask()+" "+n.getKind());
         }else{
             task.addNode(String.valueOf(n.getId()));
-            task.getNode(String.valueOf(n.getId())).addAttribute("label", n.getOpCode()+"("+n.getKind()+" "+n.getCoerce()+")");
+            task.getNode(String.valueOf(n.getId())).addAttribute("label", n.getTask()+" "+n.getOpCode()+" "+n.getKind());
         }
     }
 
